# tcmips

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  hash_sha256.c  image_viewer.c  main.c  music_player.c  raycast_softfp.c  tetris_game.c  video_player.c
demo/asserts/: tcm_docmario_png_code.inc  tcm_doraemon2_png_code.inc  tcm_kiki_png_code.inc  tcm_mario0_png_code.inc  tcm_mario_png_code.inc  tcm_misaka_png_code.inc  tcm_slumdunk2_png_code.inc  tcm_slumdunk_png_code.inc  tcm_totoro2_png_code.inc  tcm_totoro_png_code.inc
demo/campaign/: CMakeLists.txt  campaign_cap.c  campaign_hanoi.c  campaign_nim.c  campaign_rng.c  campaign_sort.c
demo/coremark/: CMakeLists.txt
demo/coremark/coremark/: core_main.c
demo/demo/: CMakeLists.txt  hash_md5.c  main.c  mandelbrotset.c  particle_simulation.c  raycast_softfp.c  rotating_cube.c  rotating_cube_tex.inc  screensaver.c
demo/demo/basictest/: CMakeLists.txt  all.c  test_aes.c  test_arithmetic_builtin.c  test_arithmetic_float.c  test_arithmetic_int64.c  test_sha256.c
demo/demo/basictest/stdlib/: test_malloc.c  test_malloc_stress.c  test_rand.c  test_regex.c  test_setjmp.c  test_strftime.c  test_time.c
demo/demo/micropython/: libMicroPython.bc
demo/doom/: .gitignore  CMakeLists.txt  DOOM1.WAD.sh
demo/doom/doomgeneric/: CMakeLists.txt  d_loop.c  d_main.c  doomgeneric.h  doomgeneric_tcmips.c  g_game.c  i_sound.c  i_video.c  info.c  m_misc.c  r_draw.c  r_main.c  r_plane.c  r_things.c  v_video.c  w_file.c  w_wad.c  z_zone.c
demo/ewolf3d/: CMakeLists.txt
demo/ewolf3d/ewolf3d/: .gitignore  fmopl.h  grstarts.c  mapdata.c  mapheaders.c  pagemap.c  pal4bit.c  sprites.c  tables.c  vi_bare.c  walls.c  wl_text.c
demo/gameboy/: CMakeLists.txt  drmario_rom.h  gb_port.c  kirby_rom.h  main.c  mario_rom.h  peanut_gb.h  zelda_rom.h
demo/litenes/: CMakeLists.txt
demo/litenes/src/: hal.c  main.c  rom_maoxiandao.h  rom_maxituan.h  rom_supermariobros.h
demo/litenes/src/fce/: fce.c  mmc.c  ppu.c
demo/micropython/: MicroPython.tcm  libMicroPython.bc
demo/palnavy/: .gitignore  CMakeLists.txt
demo/palnavy/include/: NDL.h  aviplay.h  common.h  myFLOAT.h  ui.h
demo/palnavy/libminiSDL/src/: event.c  timer.c  video.c
demo/palnavy/src/: main.c  stub.c  stub_ndl.c
demo/palnavy/src/device/: video.c
demo/palnavy/src/game/: game.c  play.c  script.c
demo/palnavy/src/global/: res.c
demo/palnavy/src/hal/: FPS.c
demo/palnavy/src/misc/: util.c  yj1.c
demo/palnavy/src/resources/: convert.py
demo/palnavy/src/scene/: map.c  scene.c
demo/palnavy/src/sound/: midi.c
demo/palnavy/src/sound/adplug/: dosbox_opls.cpp
demo/tiny386/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  adlib.c  adlib.h  fmopl.c  fmopl.h  fpu.c  fpu.h  i386.c  i386.h  i386ins.def  i8042.c  i8042.h  i8254.c  i8254.h  i8257.c  i8257.h  i8259.c  i8259.h  ide.c  ide.h  kvm.c  kvm.h  main.c  misc.c  misc.h  ne2000.c  ne2000.h  pc.c  pc.h  pci.c  pci.h  pcspk.c  pcspk.h  sb16.c  sb16.h  simd.inc  (+3 more)
demo/tiny386/resources/: convert.py  fs_hook.h  fs_stub.c
demo/umac/: .gitignore  CMakeLists.txt
demo/umac/resources/: convert.sh  umac-rom.h
demo/umac/src/: tcmips_main.c
docs/: System_Boot_Sequence.md  System_Memory_Layout.md  TCMIPS-ISA.md  Technology_Stack_Architecture.md
gamesave/: levels.txt  settings.txt
gamesave/schematics/alu_1/: alu_1.tc
gamesave/schematics/alu_2/: alu_2.tc
gamesave/schematics/and_gate_3/: and_gate_3.tc
gamesave/schematics/any_doubles/: any_doubles.tc
gamesave/schematics/architecture/: binary_programming.tc  binary_search.tc  circumference.tc  compute_xor.tc  maze.tc  mod_4.tc
tcmips/: CMakeLists.txt
tcmips/cmake/: headers.cmake  version.cmake
tcmips/dev/: CMakeLists.txt  console.c  keyboard.c  seven_segment_display.c  syscall.c
tcmips/dev/font/: font8x16.inc  font_16x32_ibmvga.inc  font_16x32_spleen.inc  font_8x16_ibmvga.inc  font_8x16_spleen.inc
tcmips/include/: tcm_config.h.in  tcm_format.h
tcmips/include/dev/: console.h  keyboard.h  seven_segment_display.h  syscall.h
tcmips/lib/: CMakeLists.txt
tcmips/lib/clang-rt/: CMakeLists.txt  comparedf2.c  comparesf2.c
tcmips/lib/gcc-rt/: CMakeLists.txt  arith64.c
tcmips/lib/libcxx/: CMakeLists.txt
tcmips/lib/libcxx/cmake/: config-ix.cmake
tcmips/lib/libcxx/include/: CMakeLists.txt  __locale
tcmips/lib/libcxxabi/: CMakeLists.txt
tcmips/lib/picolibc-1.8.11/: CMakeLists.txt
tcmips/lib/picolibc-1.8.11/cmake/: picolibc.cmake
tcmips/lib/picolibc-1.8.11/libc/include/: regex.h
tcmips/lib/picolibc-1.8.11/libc/machine/mips/: CMakeLists.txt  setjmp.c  strlen.c
tcmips/lib/picolibc-1.8.11/libc/misc/: picosbrk.c
tcmips/lib/picolibc-1.8.11/libc/string/: memcpy.c  str-two-way.h
tcmips/lib/picolibc-1.8.11/libc/time/: gettzinfo.c
tcmips/lib/picolibc-1.8.11/test/testsuite/newlib.time/: tzset.c
tcmips/loader/: CMakeLists.txt  bootloader.c  logo.inc
tcmips/start/: CMakeLists.txt  logo.inc  start.c  stub.c
test/: CMakeLists.txt  emu.c  test_conwaygameoflife.c  test_divcost.c  test_float_pi.c  test_jumptable.c  test_keyboard.c  test_memxxx.c  test_palette.c  test_pi.c  test_pi2.c  test_raycast.c  test_segdisp.c  test_stack_overflow.c  test_tetris.c  test_time.c
test/asm/: helloworld.s  test_basic.s  test_ext_ins.s  test_function.s  test_memory.s  test_mult_sdiv.s  test_syscall.s
test/av/: CMakeLists.txt  test_image_viewer.c  test_midi_player.c  test_video_player.c
test/basic/: CMakeLists.txt  all.c  test_aes.c  test_arithmetic_builtin.c  test_arithmetic_float.c  test_arithmetic_int64.c  test_sha256.c
test/cxx/: CMakeLists.txt  basic.cpp  ctors.cpp  fmt.cpp  lcm.cpp  reduce.cpp  stringview.cpp
test/stdio/: CMakeLists.txt  test_stdio.c
test/stdlib/: test_malloc_stress.c  test_rand.c  test_regex.c  test_setjmp.c  test_strftime.c  test_time.c
toolchains/cmake/: tcmips.toolchain.cmake
tools/: .gitignore
tools/font/: bdf2c.py  font.py  otb2c.py
tools/gen_logo/: gen_char.py  gen_logo.py  gen_logo_cp850.py
tools/img_to_tcm_render_code/: img_to_tcm_render_code.py
tools/mp4_to_tcm_render_code/: mp4_to_tcm_render_code.py
(+607 files in other folders)
